[package]
name = "zealot_nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zealot_nft"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-program = "=1.17.31"
anchor-spl = "=0.29.0"
oapp = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", branch = "main" }
utils = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", branch = "main" }